[package]
name = "sni-log"
version = "0.1.0"
authors = ["Raghu Saxena <poiasdpoiasd@live.com>"]
repository = "https://github.com/ckcr4lyf/sni-log"
description = "Log all domains a TLS connection is attempted to"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
etherparse = "0.13.0"
pcap = "1.0.0"
