[package]
name = "sni-log"
version = "0.1.0"
authors = ["Raghu Saxena <poiasdpoiasd@live.com>"]
repository = "https://github.com/ckcr4lyf/sni-log"
description = "Log all domains a TLS connection is attempted to"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
etherparse = "0.13.0"
libc = "0.2.140"
pcap = "1.0.0"

[target.'cfg(target_os = "linux")']
nfqueue = { git = "https://github.com/ckcr4lyf/nfqueue-rs", branch="chore/pnet" }
